--- a/movies/src/elements/Pages/Actors/style.css
+++ b/movies/src/elements/Pages/Actors/style.css
@@ -3,13 +3,64 @@
   margin: 0;
   border: 1px solid black;
 }
-.firstMovies {
+.firstactors {
   display: flex;
   flex-wrap: wrap;
   gap: 4rem;
   width: 100%;
 }
 
-.cardActor {
+.cardactors {
   display: flex;
+}
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Cor de fundo semi-transparente */
+  display: flex;
+  justify-content: center; /* Centralizar horizontalmente */
+  align-items: center; /* Centralizar verticalmente */
+  z-index: 9999; /* Colocar o modal acima de todos os outros elementos */
+}
+
+.modal {
+  text-align: center;
+  align-items: center;
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  width: 20%;
+  height: 30%;
+  z-index: 10000; /* Garantir que o modal esteja acima do overlay */
+}
+
+.close {
+  position: absolute;
+  right: 40%;
+  top: 34%;
+  font-size: 15px;
+  color: white;
+  background: black;
+  border-radius: 50%;
+  padding: 4px 10px;
+  cursor: pointer;
+}
+.form-group {
+  margin-bottom: 20px;
+}
+label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+input,
+select {
+  width: 100%;
+  padding: 8px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
