--- a/movies/src/elements/CardMovie/style.css
+++ b/movies/src/elements/CardMovie/style.css
@@ -110,3 +110,14 @@ select {
   border: 1px solid #ccc;
   border-radius: 5px;
 }
+.modal-overlay .btnForm {
+  padding: 10px 20px;
+  margin-top: 1rem;
+  margin-right: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #007bff;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+}
