--- a/movies/src/elements/Pages/Home/style.css
+++ b/movies/src/elements/Pages/Home/style.css
@@ -21,3 +21,23 @@
 .cardMovies {
   display: flex;
 }
+.btnCreate {
+  font-size: 30px;
+  text-decoration: none;
+}
+.btnCreate Link {
+  font-size: 30px;
+  text-decoration: none;
+}
+
+.modal-overlay .btnForm {
+  padding: 10px 20px;
+  margin-top: 1rem;
+  margin-right: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #007bff;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+}
